--- a/index.html
+++ b/index.html
@@ -6,21 +6,89 @@
     <title>Pioneer Bank - Hasib</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
 </head>
 <body>
     <div id="login-area">
         <h1 class="text-center">Welcome to Pioneer Bank</h1>
-        <div class="signin-area">
+        <div class="submit-area">
             <h4>Login</h4>
-            <input type="text" class="form-control" placeholder="Email">
+            <input type="text" class="form-control" placeholder="Email" id="email" value="hello@gmail.com">
             <br>
             <input type="password" class="form-control" placeholder="Password">
             <br>
-            <button class="btn btn-success">Enter</button>
+            <button class="btn btn-success" id="login-btn">Enter</button>
+        </div>
+    </div>
+    <div id="transaction-area">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="deposit status">
+                    <h5>Deposit</h5>
+                    <h2>$ <span id="currentDeposit">00</span> </h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="withdraw status">
+                    <h5>Withdraw</h5>
+                    <h2>$00</h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="balance status">
+                    <h5>Balance</h5>
+                    <h2>$ <span id="currentBalance">00</span> </h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="submit-area">
+                    <h4>Deposit</h4>
+                    <input type="text" class="form-control" id="depositAmount" placeholder="$ amount you want to deposit">
+                    <br>
+                    <button class="btn btn-success" id="deposit-btn">Deposit</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="submit-area">
+                    <h4>Withdraw</h4>
+                    <input type="text" class="form-control" id="withdrawAmount" placeholder="$ amount you want to withdraw">
+                    <br>
+                    <button class="btn btn-success" id="withdraw-btn">Withdraw</button>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script>
+        // Login button event handler
+        document.getElementById("transaction-area").style.display = "none";
+        document.getElementById("login-btn").addEventListener( "click", () => {
+            const loginArea = document.getElementById("login-area").style.display = "none";
+            document.getElementById("transaction-area").style.display = "block";
+        } );
+
+        // Deposit button event handler
+        document.getElementById("deposit-btn").addEventListener( "click", () => {
+            const depositAmount = parseFloat( document.getElementById("depositAmount").value );
+            const currentDeposit = parseFloat( document.getElementById("currentDeposit").innerText );
+            const newDeposit = currentDeposit + depositAmount;
+            document.getElementById("currentDeposit").innerText = newDeposit;
+            document.getElementById("depositAmount").value = "";
+
+            // Update balance
+            const currentBalance = parseFloat(document.getElementById("currentBalance").innerText);
+            const newBalance = currentBalance + depositAmount;
+            document.getElementById("currentBalance").innerHTML = newBalance;
+        } )
+
+        // Withdraw button event handler
+        document.getElementById("withdraw-btn").addEventListener( "click", () => {
+
+        } )
+    </script>
 </body>
 </html>
